--- a/torque-app/package.json
+++ b/torque-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "torque-app",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha",
   "description": "ATS/ETS2 Powertrain Architect",
   "author": "Alfred Davis (alwdavis81)",
   "private": true,
