--- a/torque-app/package.json
+++ b/torque-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "torque-app",
-  "version": "1.1.0-alpha",
+  "version": "1.1.1-alpha",
   "description": "ATS/ETS2 Powertrain Architect",
   "author": "Alfred Davis (alwdavis81)",
   "private": true,
@@ -40,7 +40,9 @@
       "node_modules/**/*"
     ],
     "extraFiles": [
-      "HOW_TO_USE.md"
+      "HOW_TO_USE.md",
+      "README.md",
+      "ARCHITECTURE.md"
     ],
     "nsis": {
       "oneClick": true,
